Fix image path case or add missing file

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
       integrity="sha384-PDUiPu3vDllMfrUHnurV430Qg8chPZTNhY8RUpq89lq22R3PzypXQifBpcpE1eoB"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>BLS Polymers</title>
   </head>
   <body>
